# energyid-py

./: .gitignore  .pre-commit-config.yaml  Demo Async.ipynb  Demo.ipynb  Demo_webhook.ipynb  README.md  add_records.ipynb  demo_credentials.yaml  demo_secrets.json  export-full-archive.py  export_all_from_user.ipynb  locustfile.py  manifest.in  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  updated_flow.ipynb
.github/: publish.yaml
energyid/: __init__.py  asyncclient.py  client.py  misc.py  models.py  pandasclient.py
energyid/aio/: __init__.py  client.py  misc.py  models.py
energyid/webhooks/: __init__.py  client.py
src/energyid/: __init__.py  client.py  misc.py  models.py  pandasclient.py  scope.py
src/energyid/aio/: __init__.py  client.py  misc.py  models.py
src/energyid/aio/clients/: __init__.py  base.py  data_helpers.py  json.py  pandas.py  rate_limit.py
src/energyid/aio/clients/endpoints/: __init__.py  catalogs.py  groups.py  members.py  meters.py  organizations.py  records.py  search.py  transfers.py
tests/: test_aio_client.py  test_client.py  test_models.py  test_pandasclient.py
