[project]
name = "energyid-py"
version = "0.0.19"
description = "Python interface for the EnergyID API and Webhooks"
authors = [
    { name = "Jan Pecinovsky", email = "jan@energieid.be" },
    { name = "Oscar Swyns", email = "oscar@energieid.be" },
    { name = "Max Helskens", email = "max@energieid.be" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "energyid-webhooks>=0.0.6",
    "more-itertools>=10.7.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[tool.uv.workspace]
members = [
    "example",
]
